force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/GMBLASERP__Inventory_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Inventory Settings</label>
</CustomObject>