force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/GMBLASERP__disable_gtOutboundInventoryMovement__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__disable_gtOutboundInventoryMovement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disable gtOutboundInventoryMovement</label>
    <type>Checkbox</type>
</CustomField>