force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/GMBLASERP__disable_lotNameConstraints__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__disable_lotNameConstraints__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is NOT checked, then: (1) the lot name will end-up composed entirely of caps and numerals, with the option of an asterisk suffix; (2) uniqueness of the the lot name and the product Id will be enforced before insert/update.</inlineHelpText>
    <label>disable lotNameConstraints</label>
    <type>Checkbox</type>
</CustomField>