force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/GMBLASERP__disable_price_automation_on_PO_Line__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__disable_price_automation_on_PO_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is NOT checked, the default unit price for a Purchase Order Line will be the price stored in PurchaseOrder.Pricebook.</inlineHelpText>
    <label>disable price automation on PO Line</label>
    <type>Checkbox</type>
</CustomField>