force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/GMBLASERP__disable_price_automation_on_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__disable_price_automation_on_Project_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is NOT checked, the default unit price for a Project Task will be the price stored in Project.Pricebook.</inlineHelpText>
    <label>disable price automation on Project Task</label>
    <type>Checkbox</type>
</CustomField>