force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/GMBLASERP__enable_gtTransaction__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__enable_gtTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enable gtTransaction</label>
    <type>Checkbox</type>
</CustomField>