force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/GMBLASERP__Purchase_Order_Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Purchase_Order_Pricebook_Id__c</fullName>
    <label>Purchase Order Pricebook Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>