force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/GMBLASERP__Transit_Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Transit_Warehouse_Id__c</fullName>
    <label>Transit Warehouse Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>