force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/Wholesale_Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Warehouse_Id__c</fullName>
    <label>Wholesale Warehouse Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>