force-app/main/default/objects/GMBLASERP__Inventory_Settings__c/fields/Work_Order_Partner_Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Partner_Pricebook_Id__c</fullName>
    <label>Work Order Partner Pricebook Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>